; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_pf_norm.c_pf_find_fragment_by_ipv6_header.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_pf_norm.c_pf_find_fragment_by_ipv6_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pf_fragment = type { i32 }
%struct.ip6_hdr = type { i32 }
%struct.ip6_frag = type { i32 }
%struct.pf_frag_tree = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.pf_fragment* (%struct.ip6_hdr*, %struct.ip6_frag*, %struct.pf_frag_tree*)* @pf_find_fragment_by_ipv6_header to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.pf_fragment* @pf_find_fragment_by_ipv6_header(%struct.ip6_hdr* %0, %struct.ip6_frag* %1, %struct.pf_frag_tree* %2) #0 {
  %4 = alloca %struct.ip6_hdr*, align 8
  %5 = alloca %struct.ip6_frag*, align 8
  %6 = alloca %struct.pf_frag_tree*, align 8
  %7 = alloca %struct.pf_fragment, align 4
  store %struct.ip6_hdr* %0, %struct.ip6_hdr** %4, align 8
  store %struct.ip6_frag* %1, %struct.ip6_frag** %5, align 8
  store %struct.pf_frag_tree* %2, %struct.pf_frag_tree** %6, align 8
  %8 = load %struct.ip6_hdr*, %struct.ip6_hdr** %4, align 8
  %9 = load %struct.ip6_frag*, %struct.ip6_frag** %5, align 8
  %10 = call i32 @pf_ip6hdr2key(%struct.pf_fragment* %7, %struct.ip6_hdr* %8, %struct.ip6_frag* %9)
  %11 = load %struct.pf_frag_tree*, %struct.pf_frag_tree** %6, align 8
  %12 = call %struct.pf_fragment* @pf_find_fragment_by_key(%struct.pf_fragment* %7, %struct.pf_frag_tree* %11)
  ret %struct.pf_fragment* %12
}

declare dso_local i32 @pf_ip6hdr2key(%struct.pf_fragment*, %struct.ip6_hdr*, %struct.ip6_frag*) #1

declare dso_local %struct.pf_fragment* @pf_find_fragment_by_key(%struct.pf_fragment*, %struct.pf_frag_tree*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
